--- a/kapiloroskopi/templates/layout.html
+++ b/kapiloroskopi/templates/layout.html
@@ -27,7 +27,7 @@
       content="width=device-width, initial-scale=1.0, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0"
     />
 
-    <title>{% block title %}{% endblock title %} | Quanta Quire</title>
+    <title>{% block title %}{% endblock title %} | Capillaroscopy Classifier</title>
 
     <meta name="description" content="" />
 
